project2/svc-node.yaml
apiVersion: v1
kind: Service 
metadata:
  name: django-node-svc
  labels:
    app: django-node-svc    
spec:
  type: NodePort
  ports:              
    - port: 8000        
      protocol: TCP
      targetPort: 8000  
  selector: 
    app: django
